Added Light Splash.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,14 +132,14 @@
 
         <activity android:name=".ViewTestActivity"/>
 
+        <!-- Begin - Root Activities -->
         <activity
             android:name=".activities.SplashActivity"
             android:clearTaskOnLaunch="true"
             android:screenOrientation="portrait"
-            android:theme="@style/ProtonTheme.Splash.Mail">
+            android:theme="@style/ProtonTheme.Splash.Light.Mail">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <meta-data
@@ -147,16 +147,18 @@
                 android:resource="@xml/shortcuts" />
         </activity>
         <activity
-            android:name=".activities.settings.AttachmentStorageActivity"
-            android:exported="false"
-            android:label="@string/local_storage"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".mailbox.presentation.MailboxActivity"
             android:exported="false"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleTask"
-            android:maxRecents="1" />
+            android:maxRecents="1"
+            android:theme="@style/ProtonTheme.Splash.Light.Mail" />
+        <!-- End - Root Activities -->
+        <activity
+            android:name=".activities.settings.AttachmentStorageActivity"
+            android:exported="false"
+            android:label="@string/local_storage"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".details.presentation.MessageDetailsActivity"
             android:exported="false"
