--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/ProtonTheme.Mail"
+        android:taskAffinity=""
         tools:replace="android:theme">
 
         <!-- Disable default WorkManagerInitializer for use Hilt injection -->
@@ -135,8 +136,9 @@
         <!-- Begin - Root Activities -->
         <activity
             android:name=".activities.SplashActivity"
-            android:clearTaskOnLaunch="true"
+            android:exported="true"
             android:screenOrientation="portrait"
+            android:launchMode="singleInstance"
             android:theme="@style/ProtonTheme.Splash.Light.Mail">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -150,7 +152,6 @@
             android:name=".mailbox.presentation.MailboxActivity"
             android:exported="false"
             android:configChanges="orientation|screenSize"
-            android:launchMode="singleTask"
             android:maxRecents="1"
             android:theme="@style/ProtonTheme.Splash.Light.Mail" />
         <!-- End - Root Activities -->
@@ -179,7 +180,6 @@
         </activity>
         <activity
             android:name=".activities.composeMessage.ComposeMessageActivity"
-            android:clearTaskOnLaunch="true"
             android:configChanges="orientation|screenSize"
             android:parentActivityName=".mailbox.presentation.MailboxActivity"
             android:windowSoftInputMode="adjustResize|stateAlwaysVisible">
