Moved contact details to new package structure.
MAILAND-1875

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -264,7 +264,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden|adjustNothing" />
         <activity
-            android:name=".contacts.details.ContactDetailsActivity"
+            android:name=".contacts.details.presentation.ContactDetailsActivity"
             android:exported="false"
             android:label="@string/contact_details"
             android:screenOrientation="portrait"
