--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -212,6 +212,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
+        <activity android:name=".compose.presentation.ui.SetMessageExpirationActivity"/>
         <activity
             android:name=".activities.SearchActivity"
             android:exported="false"
