--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -213,6 +213,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".compose.presentation.ui.SetMessageExpirationActivity"/>
+        <activity android:name=".compose.presentation.ui.SetMessagePasswordActivity"/>
         <activity
             android:name=".activities.SearchActivity"
             android:exported="false"
