--- a/app/old.build.gradle
+++ b/app/old.build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation files('libs/mail-activation.jar')
     // endregion
 
-    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
+//    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
     configurations.all {
         exclude group: 'com.android.support', module: 'support-v13'
     }
@@ -37,14 +37,13 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.birbit:android-priority-jobqueue:3.0.0'
-    implementation 'com.atlassian.commonmark:commonmark:0.13.0'
+    implementation 'com.atlassian.commonmark:commonmark:0.13.0' // parser used in HTMLToMDConverter
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
-    implementation 'com.badoo.mobile:android-weak-handler:1.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'com.wdullaer:materialdatetimepicker:3.2.2'
-    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
-    implementation('com.googlecode.ez-vcard:ez-vcard:0.10.3') {
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+    implementation('com.googlecode.ez-vcard:ez-vcard:0.11.2') {
         // hCard functionality not needed
         exclude group: 'org.jsoup'
         exclude group: 'org.freemarker'
