--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -278,7 +278,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
-            android:name=".activities.AccountTypeActivity"
+            android:name=".settings.presentation.AccountTypeActivity"
             android:exported="false"
             android:label="@string/subscription"
             android:screenOrientation="portrait"
