Updated gitlab build script to use standard detekt plugin for analysis.
MAILAND-1792

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,10 +31,10 @@ stages:
   tags:
     - medium
   script:
-    - ./gradlew multiModuleDetekt
+    - ./gradlew detekt
   artifacts:
     reports:
-      codequality: config/detekt/reports/mergedReport.json
+      codequality: config/detekt/reports/detekt.txt
 
 detekt analysis release:
   extends: .detekt-analysis-common
