Add elevation to toolbar in settings screens Facelift to v4 designs to Auto-download message setting screen and background sync setting screen

--- a/app/src/main/res/raw/edit_settings_structure.json
+++ b/app/src/main/res/raw/edit_settings_structure.json
@@ -131,5 +131,23 @@
       "setting_hasValue": true,
       "setting_type": "toggle"
     }
+  ],
+  [
+    {
+      "setting_id": "auto_download_messages",
+      "is_section": false,
+      "setting_value": "",
+      "setting_hasValue": true,
+      "setting_type": "toggle"
+    }
+  ],
+  [
+    {
+      "setting_id": "background_sync",
+      "is_section": false,
+      "setting_value": "",
+      "setting_hasValue": true,
+      "setting_type": "toggle"
+    }
   ]
 ]
