--- a/app/src/main/res/raw/settings_structure.json
+++ b/app/src/main/res/raw/settings_structure.json
@@ -50,6 +50,13 @@
     "setting_type": "drill"
   },
   {
+    "setting_id": "swiping_gesture",
+    "is_section": false,
+    "setting_value": "",
+    "setting_hasValue": false,
+    "setting_type": "drill"
+  },
+  {
     "setting_id": "app_local_cache",
     "is_section": false,
     "setting_value": "",
