--- a/app/src/main/res/raw/acc_settings_structure.json
+++ b/app/src/main/res/raw/acc_settings_structure.json
@@ -32,6 +32,13 @@
     "setting_type": "info"
   },
   {
+    "setting_id": "conversation_mode",
+    "is_section": false,
+    "setting_value": "",
+    "setting_hasValue": false,
+    "setting_type": "toggle"
+  },
+  {
     "setting_id": "addresses",
     "is_section": true
   },
@@ -66,13 +73,6 @@
   },
   {
     "setting_id": "privacy",
-    "is_section": false,
-    "setting_value": "",
-    "setting_hasValue": false,
-    "setting_type": "drill"
-  },
-  {
-    "setting_id": "search",
     "is_section": false,
     "setting_value": "",
     "setting_hasValue": false,
