--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -232,11 +232,13 @@
         <activity
             android:name=".activities.SettingsActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:label="@string/settings"/>
         <activity
             android:name=".activities.AccountSettingsActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:label="@string/account_settings"/>
         <activity
             android:name=".activities.EngagementActivity"
             android:exported="false"
