Revert "Clean up after removing ImportAttachmentsWorker.kt"
This reverts commit 5db8f021a94f9e079ba12283e9b460d25a699284.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -215,6 +215,11 @@
         <activity android:name=".compose.presentation.ui.SetMessageExpirationActivity"/>
         <activity android:name=".compose.presentation.ui.SetMessagePasswordActivity"/>
         <activity
+            android:name=".activities.AddAttachmentsActivity"
+            android:exported="false"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.SearchActivity"
             android:exported="false"
             android:configChanges="orientation|screenSize"
