Core Mail Settings adoption for view mode and swipe action
MAILAND-2032
MAILAND-2087

When you would change the view mode from conversations to messages or the other way around and go back to the mailbox the setting change was ignored. Now on this action we clear the messages and conversation tables and reload the mailbox. We rely on the mail settings core module to persist the change.

MAILAND-2087

Rename and move use case that handles changes to view mode

Swipe actions were showing the default actions instead of actions set up by the user

Now we use the mail settings flow from core, we observe it in the mailbox so it is reflected for the initial fetch of settings and after a change from the settings activity.

MAILAND-2032

Extracted logic from SwipeChooserActivity to a view model

Extracted logic from AccountSettingsActivity.kt to a view model

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -240,7 +240,7 @@
             android:screenOrientation="portrait"
             android:label="@string/settings"/>
         <activity
-            android:name=".activities.AccountSettingsActivity"
+            android:name=".settings.presentation.AccountSettingsActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:label="@string/account_settings"/>
