Update detekt command run on CI and the current error count.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ stages:
   tags:
     - medium
   script:
-    - ./gradlew detekt
+    - ./gradlew detektBetaDebug
   artifacts:
     reports:
       codequality: config/detekt/reports/detekt.json
