Make detekt reports beig uploaded on failure instead of on success

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ stages:
   script:
     - ./gradlew detektBetaDebug
   artifacts:
+    when: on_failure
     expire_in: 1 week
     paths:
       - config/detekt/reports/*
