Revert "Core Mail Settings adoption for view mode and swipe actions"
This reverts commit 54820ceb

Revert "Extracted logic from SwipeChooserActivity to a view model"

This reverts commit d2ed89c5

Revert "Swipe actions were showing the default actions instead of actions set up by the user"

This reverts commit cb252e9c

Revert "Rename and move use case that handles changes to view mode"

This reverts commit 88ef4deb

Revert "When you would change the view mode from conversations to messages or the other way around and go back to the mailbox the setting change was ignored. Now on this action we clear the messages and conversation tables and reload the mailbox. We rely on the mail settings core module to persist the change."

This reverts commit 737c11a2

Revert "Update core libraries to introduce mail settings module"

This reverts commit 0f4cb3b3

Revert "Moved Conversation.kt model inside domain/model directory"

This reverts commit 2c8508c8

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -240,7 +240,7 @@
             android:screenOrientation="portrait"
             android:label="@string/settings"/>
         <activity
-            android:name=".settings.presentation.AccountSettingsActivity"
+            android:name=".activities.AccountSettingsActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:label="@string/account_settings"/>
