Use large CI runner for detekt analyse step
This is to solve some OOM failures we're having on the CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ stages:
 .detekt-analysis-common:
   stage: analyze
   tags:
-    - medium
+    - large
   script:
     - ./gradlew detektBetaDebug
   artifacts:
