Adds expiration icon to the collapsed message view
Adds the expiration view to the collapsed messages, which shows the icon and the
time using the largest available time unit, e.g. 7days 6hours will be shown as 7D.
In addition, updates the mockk to the most recent version.

MAILAND-2236

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,6 +132,7 @@
 
 
         <activity android:name=".ViewTestActivity"/>
+        <activity android:name=".util.HiltViewTestActivity"/>
 
         <!-- Begin - Root Activities -->
         <activity
