--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -311,7 +311,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
-            android:name=".activities.labelsManager.LabelsManagerActivity"
+            android:name=".labels.presentation.LabelsManagerActivity"
             android:exported="false"
             android:label="@string/labels_and_folders"
             android:windowSoftInputMode="adjustResize|stateHidden" />
