--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -279,6 +279,34 @@ firebase feature tests:
       --timeout 45m
       --client-details testType=$TEST_TYPE,testSuite=$TEST_CLASS,commitBranch=$CI_COMMIT_BRANCH,gitlabJobUrl=$CI_JOB_URL
 
+
+firebase instrumentation tests:
+  stage: test
+  needs:
+    - job: build debug uitests
+  tags:
+    - small
+  script:
+    - wget --quiet --output-document=/tmp/google-cloud-sdk.tar.gz https://dl.google.com/dl/cloudsdk/channels/rapid/google-cloud-sdk.tar.gz
+    - mkdir -p /opt
+    - tar zxf /tmp/google-cloud-sdk.tar.gz --directory /opt
+    - /opt/google-cloud-sdk/install.sh --quiet
+    - source /opt/google-cloud-sdk/path.bash.inc
+    - gcloud components update
+    - echo $CLOUD_PROJECT_ID_MAIL
+    - gcloud config set project $CLOUD_PROJECT_ID_MAIL
+    - echo $SERVICE_ACCOUNT_MAIL > /tmp/service-account.json
+    - gcloud auth activate-service-account --key-file /tmp/service-account.json
+    - gcloud firebase test android run
+      --app app/build/outputs/apk/beta/debug/ProtonMail-Android-${VERSION_NAME}-beta-debug.apk
+      --test app/build/outputs/apk/androidTest/beta/debug/ProtonMail-Android-${VERSION_NAME}-beta-debug-androidTest.apk
+      --type=instrumentation
+      --device model=Pixel2,version=28
+      --test-targets "notPackage ch.protonmail.android.uitests"
+      --use-orchestrator
+      --num-flaky-test-attempts=1
+      --timeout 20m
+
 include:
   - project: 'translations/generator'
     ref: master
