--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+# Git Toolbox plugin
+.idea/git_toolbox_prj.xml
+
