--- a/gradle.properties
+++ b/gradle.properties
@@ -44,3 +44,7 @@ DATABASE_VERSION=1
 
 # Disable Ajcore reports
 org.aspectj.weaver.Dump.exception=false
+
+# https://issuetracker.google.com/issues/172784894?pli=1
+# https://github.com/bcgit/bc-java/issues/762
+android.jetifier.blacklist=bcprov-jdk15on
