Add APP_THEME setting
Added in settings_structure.json and SettingsEnum.kt

MAILAND-2637

--- a/app/src/main/res/raw/settings_structure.json
+++ b/app/src/main/res/raw/settings_structure.json
@@ -15,6 +15,13 @@
     "is_section": true
   },
   {
+    "setting_id": "app_theme",
+    "is_section": false,
+    "setting_value": "",
+    "setting_hasValue": false,
+    "setting_type": "drill"
+  },
+  {
     "setting_id": "push_notification",
     "is_section": false,
     "setting_value": "",
