Prevent some CI stages from running on scheduled builds
The goal of this is to ensure the automated PRs that update the
translations from corwdin are working. They are running on a schedule
and the last couple have been failing on steps that aren't needed at
that time (schedule only cares about opening the MR with translations,
all checks will then run on the MR itself)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,8 @@ detekt analysis:
   stage: analyze
   tags:
     - large
+  except:
+    - schedules
   script:
     - ./gradlew detektBetaDebug
     - cat config/detekt/reports/detekt.json | jq '.runs[0].results' | jq 'map(with_entries(if .key == "level" then .key = "severity" else . end))' | tee config/detekt/reports/deket.json
@@ -156,6 +158,8 @@ firebase instrumentation tests:
   stage: test
   dependencies:
     - build debug
+  except:
+    - schedules
   tags:
     - small
   script:
@@ -207,6 +211,8 @@ startReview:
     - export REVIEW_APP_ARTIFACT_PATH="app/build/outputs/apk/beta/debug/ProtonMail-Android-${VERSION_NAME}-beta-debug.apk"
     - echo ${REVIEW_APP_ARTIFACT_PATH}
   extends: .startReview
+  except:
+    - schedules
 
 stopReview:
   extends: .stopReview
@@ -272,9 +278,12 @@ publish-github:
   extends: .release-make-release
   tags:
     - small
+
 check for fixups:
   stage: analyze
   script:
     - git fetch origin $CI_COMMIT_BRANCH
     - git fetch origin develop
     - git log --pretty=%s "origin/develop..origin/$CI_COMMIT_BRANCH" | awk '$0 ~ /^fixup/ {find = 1}; END { exit find }'
+  except:
+    - schedules
