--- a/config/detekt/config.yml
+++ b/config/detekt/config.yml
@@ -1,8 +1,9 @@
+# 2021-12-16T10:22:20.289754
 # Integrity check *
 
 # Default excluded files are `` ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**'] ``
 build:
-  maxIssues: 1862
+  maxIssues: 909
   excludeCorrectable: false
   weights:
   # complexity: 2
@@ -47,7 +48,7 @@ console-reports:
 
 comments:
   active: true
-  excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
+  excludes: [ '**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**' ]
   AbsentOrWrongFileLicense:
     active: false
     # licenseTemplateFile: 'license.template'
@@ -57,6 +58,8 @@ comments:
   # do not report private property with comments
   CommentOverPrivateProperty:
     active: false
+  DeprecatedBlockTag:
+    active: true
   # do not report comments with wrong end of sentence
   EndOfSentenceFormat:
     active: false
@@ -128,8 +131,8 @@ complexity:
     active: true
     threshold: 6
   NamedArguments:
-    active: false
-    # threshold: 6
+    active: true
+    threshold: 5
   NestedBlockDepth:
     active: true
     threshold: 4
@@ -161,6 +164,8 @@ coroutines:
   GlobalCoroutineUsage:
     active: true
   RedundantSuspendModifier:
+    active: true
+  SleepInsteadOfDelay:
     active: true
   SuspendFunWithFlowReturnType:
     active: true
@@ -206,13 +211,15 @@ exceptions:
   # report functions which should never throw an exception
   ExceptionRaisedInUnexpectedLocation:
     active: true
-    methodNames: [toString, hashCode, equals, finalize]
+    methodNames: [ toString, hashCode, equals, finalize ]
   # reports catch blocks which check for the type of an exception via is checks or casts
   InstanceOfCheckForException:
     active: false
     # excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
   # reports all exceptions of the type NotImplementedError and `TO\\DO(..)`
   NotImplementedDeclaration:
+    active: true
+  ObjectExtendsThrowable:
     active: true
   PrintStackTrace:
     active: true
@@ -356,6 +363,9 @@ formatting:
     active: true
     autoCorrect: true
     indentSize: 4
+  SpacingAroundAngleBrackets:
+    active: true
+    autoCorrect: true
   SpacingAroundColon:
     active: true
     autoCorrect: true
@@ -383,6 +393,9 @@ formatting:
   SpacingAroundRangeOperator:
     active: false
     # autoCorrect: true
+  SpacingAroundUnaryOperator:
+    active: true
+    autoCorrect: true
   # example compliant     `@file:JvmName(...)`
   # example non compliant `@file: JvmName(...)`
   SpacingBetweenDeclarationsWithAnnotations:
@@ -426,14 +439,14 @@ naming:
     # minimumFunctionNameLength: 3
   FunctionNaming:
     active: true
-    excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
+    excludes: [ '**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**' ]
     functionPattern: '([a-zA-Z][a-zA-Z0-9]*)|(`.*`)'
     excludeClassPattern: '$^'
     ignoreOverridden: true
-    ignoreAnnotated: ['Composable']
+    ignoreAnnotated: [ 'Composable' ]
   FunctionParameterNaming:
     active: true
-    excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
+    excludes: [ '**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**' ]
     parameterPattern: '[a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
     ignoreOverridden: true
@@ -446,22 +459,24 @@ naming:
   MemberNameEqualsClassName:
     active: true
     ignoreOverridden: true
+  NoNameShadowing:
+    active: false
   NonBooleanPropertyPrefixedWithIs:
     active: true
-    excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
+    excludes: [ '**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**' ]
   ObjectPropertyNaming:
     active: true
-    excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
+    excludes: [ '**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**' ]
     constantPattern: '[A-Za-z][_A-Za-z0-9]*'
     propertyPattern: '[A-Za-z][_A-Za-z0-9]*'
     privatePropertyPattern: '(_)?[A-Za-z][_A-Za-z0-9]*'
   PackageNaming:
     active: true
-    excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
+    excludes: [ '**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**' ]
     packagePattern: '[a-z]+(\.[a-z][A-Za-z0-9]*)*'
   TopLevelPropertyNaming:
     active: true
-    excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
+    excludes: [ '**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**' ]
     constantPattern: '[A-Z][_A-Z0-9]*'
     propertyPattern: '[A-Za-z][_A-Za-z0-9]*'
     privatePropertyPattern: '_?[A-Za-z][_A-Za-z0-9]*'
@@ -496,7 +511,11 @@ performance:
 
 potential-bugs:
   active: true
+  CastToNullableType:
+    active: true
   Deprecation:
+    active: true
+  DoubleMutabilityForCollection:
     active: true
   DuplicateCaseInWhenExpression:
     active: true
@@ -576,6 +595,8 @@ potential-bugs:
     active: true
   UnsafeCallOnNullableType:
     active: true
+  UnreachableCatchBlock:
+    active: true
   UnsafeCast:
     active: false
   UselessPostfixExpression:
@@ -625,7 +646,8 @@ style:
     # methods: ['kotlin.io.println', 'kotlin.io.print']
   ForbiddenPublicDataClass:
     active: false
-    # ignorePackages: '*.internal,*.internal.*'
+    # excludes: ['**']
+    # ignorePackages: ['*.internal, *.internal.*']
   ForbiddenVoid:
     active: true
     ignoreOverridden: false
@@ -637,8 +659,10 @@ style:
     excludeAnnotatedFunction: "dagger.Provides"
   LibraryCodeMustSpecifyReturnType:
     active: false
+    # excludes: ['**']
   LibraryEntitiesShouldNotBePublic:
     active: false
+    # excludes: ['**']
   LoopWithTooManyJumpStatements:
     active: true
     maxJumpCount: 2
@@ -661,7 +685,7 @@ style:
     active: true
   MaxLineLength:
     active: true
-    excludes: ['**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**']
+    excludes: [ '**/test/**', '**/**Test/**', '**/gradle/**', '**/buildSrc/**' ]
     maxLineLength: 120
     excludePackageStatements: true
     excludeImportStatements: true
@@ -670,11 +694,15 @@ style:
     active: true
   ModifierOrder:
     active: true
+  MultilineLambdaItParameter:
+    active: false
   NestedClassesVisibility:
     active: true
   NewLineAtEndOfFile:
     active: true
   NoTabs:
+    active: false
+  ObjectLiteralToLambda:
     active: false
   OptionalAbstractKeyword:
     active: true
@@ -809,6 +837,10 @@ style:
   UseIfEmptyOrIfBlank:
     active: true
   UseIfInsteadOfWhen:
+    active: true
+  UseIsNullOrEmpty:
+    active: true
+  UseOrEmpty:
     active: true
   UseRequire:
     active: true
